# kafka_producer

./: Cargo.toml  README.md  settings.json  test_message_2.txt
src/: main.rs  main_test.rs
