
[package]
name = "kafka_producer"
version = "1.0.0"
edition = "2024"
authors = ["Joshua Clements <clements604@gmail.com"]
description = "A basic Kafka producer to aid in development activities written in Rust."
license = "MIT"
repository = "https://github.com/clements604/kafka_producer"
homepage = "https://github.com/clements604/kafka_producer"
readme = "README.md"
keywords = ["kafka", "producer", "cli", "rust"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/target", "*.log"]

[dependencies]
rdkafka = { version = "0.38.0", features = ["ssl"] }
clap = { version = "4.5.53", features = ["derive"] }
config = { version = "0.15.19", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3"
log = "0.4.28"
env_logger = "0.11.8"
atty = "0.2.14"
anyhow = "1.0.100"

[dev-dependencies]
serde_json = "1.0"